--- a/option.html
+++ b/option.html
@@ -26,6 +26,29 @@
         <label>Female</label>
         <input type="radio" id="adi" name="html" value="adi1">
         <label>Other</label>
+
+        <!--Check box-->
+        <br><br>
+        <label>Selct your education </label>
+        <br>
+        <label>Class 10</label>
+        <input type="checkbox">
+        <label>Class 12</label>
+        <input type="checkbox">
+        <label>Class UG</label>
+        <input type="checkbox">
+        <label>Class PG</label>
+        <input type="checkbox">
+         <br><br>
+        <!--Button-->
+        <button>Click</button>
+        <input type="submit">
+
+        <!--file-->
+        <br>
+        <label>Select your file</label>
+        <input type="file">
+
     </form>
 </body>
 </html>
